# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-12-12  Michael Jahn
	* new import plugins: All My Movies, BES The Movie Library, Fox Movie Manager, MyDVDs, The Movie Library
	  (all MS Access / Jet DB based)
	* cleanup import sections of other import plugins

2009-12-08  Michael Jahn
	* [#486258] no refresh when a filter is active
	* [#418911] It doesn't import cover art from FilmAffinity
	* movie plugin test data updated

2009-12-01  Michael Jahn
	* re-introducing a debug window on windows platforms (activated via --debug)

2009-11-22  Michael Jahn
	* wintoolz Filmdatenbank import plugin added
	* [#480380] Extensions: Amazon and Remover

2009-11-18  Michael Jahn
	* fixed some issues with the functions "new db" and "restore db"
	* [#480366] ImportError: No module named extensions

2009-11-17  Michael Jahn
	* load and save of extensions preferences
	* [#484385] Export to XML: no image filename exported to XML-File

2009-11-10  Michael Jahn
	* updated movie plugins Allocine and FilmAffinity

2009-11-06  Michael Jahn
	* Personal Video Database import plugin added
	* fixed amazon binding (generation of signed urls added but
	  every user needs an amazon account for the access key and secret key)

2009-10-16  Michael Jahn
	* eXtreme Movie Manager import plugin added
	* import support for movie detail video codec
	* "Remover" extensions removes associated tags and languages
	  before removing the movie entry

2009-10-13  Michael Jahn
	* support for posters for import plugins GCstar and AMC
	* [#410362] AMC importer doesn't import cover pictures

2009-10-07  Michael Jahn
	* DVD Profiler import plugin added
	* very small update for AMC import plugin (medium typ)
	* import base class: support for looking up medium types and adding tags,
	  barcode, cameraman, screenplay
	* import stabilized with try-except and error message box

2009-09-30  Piotr Ożarowski
	* Change log format

2009-09-29  Michael Jahn