@@ -148,7 +148,7 @@ class ImportPlugin(IP):
             curs = self.connection.cursor()
             tablerow = curs.tables(table='dvd').fetchone()
             if tablerow:
-                version = 1.0
+                version = 1.6
             curs.close()
         except Exception, e:
             log.error(str(e))
