@@ -9,6 +9,7 @@ Griffith 0.11
    - eXtreme Movie Manager
    - Fox Movie Manager
    - GCstar
+   - MovieTrack
    - MyDVDs
    - Personal Video Database
    - The Movie Library
